<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_retry"
                android:title="@string/menu_retry" />
            
            <item
                android:id="@+id/action_refresh"
                android:title="@string/menu_refresh" />
            
            <item
                android:id="@+id/action_clear_session"
                android:title="@string/menu_clear_session" />
            
            <item
                android:id="@+id/action_delete_session"
                android:title="@string/menu_delete_session" />
            
            <item
                android:id="@+id/action_preview"
                android:title="@string/menu_preview" />
            
            <item
                android:id="@+id/action_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>

